--- a/.github/workflows/publish-technical-documentation-next.yml
+++ b/.github/workflows/publish-technical-documentation-next.yml
@@ -7,6 +7,11 @@ on:
     paths:
       - "docs/sources/**"
   workflow_dispatch:
+
+# Set restrictive permissions at workflow level
+permissions:
+  contents: read
+
 jobs:
   sync:
     if: github.repository == 'grafana/beyla'
@@ -16,7 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-        persist-credentials: 'false'
+        with:
+          persist-credentials: false
       - uses: grafana/writers-toolkit/publish-technical-documentation@39cdc38767184996e25d611923f8ce697e33bc70 # publish-technical-documentation/v1
         with:
           website_directory: content/docs/beyla/next
