--- a/.github/workflows/pull_request_integration_tests_vm_5.15_x86_64.yml
+++ b/.github/workflows/pull_request_integration_tests_vm_5.15_x86_64.yml
@@ -8,6 +8,10 @@ on:
     branches: [ 'main', 'release-*' ]
     paths: [ 'bpf/**' ]
 
+# Set restrictive permissions at workflow level
+permissions:
+  contents: read
+
 jobs:
   test:
     uses: ./.github/workflows/workflow_integration_tests_vm.yml
