--- a/.github/workflows/helm-test.yml
+++ b/.github/workflows/helm-test.yml
@@ -16,6 +16,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Set restrictive permissions at workflow level
+permissions:
+  contents: read
+
 env:
   CT_CONFIGFILE: "${{ github.workspace }}/.github/configs/ct.yml"
 
