--- a/.github/workflows/check_gh_actions_security.yml
+++ b/.github/workflows/check_gh_actions_security.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@c7f87aa956e4c323abf06d5dec078e358f6b4d04 # v6.0.0
+        with:
+          enable-cache: 'false'
 
       - name: Run zizmor 🌈
         run: uvx zizmor --format=github .
