--- a/test/integration/components/go_grpc_server_mux/Dockerfile_pinger_tls
+++ b/test/integration/components/go_grpc_server_mux/Dockerfile_pinger_tls
@@ -1,5 +1,5 @@
 # Build the testserver binary
-# Docker command must be invoked from the projec root directory
+# Docker command must be invoked from the project root directory
 FROM fullstorydev/grpcurl:latest-alpine AS builder
 
 WORKDIR /
