--- a/test/integration/configs/instrumenter-config-elixir.yml
+++ b/test/integration/configs/instrumenter-config-elixir.yml
@@ -8,3 +8,7 @@ attributes:
   select:
     "*":
       include: ["*"]
+discovery:
+  services:
+    - open_ports: 4000
+      containers_only: true      
