Add option for process discovery to filter on containers (#1887)

--- a/test/integration/configs/instrumenter-config-elixir.yml
+++ b/test/integration/configs/instrumenter-config-elixir.yml
@@ -8,3 +8,8 @@ attributes:
   select:
     "*":
       include: ["*"]
+discovery:
+  services:
+    - open_ports: 4000
+      namespace: integration-test
+      containers_only: true      
