--- a/.github/workflows/security-check.yml
+++ b/.github/workflows/security-check.yml
@@ -1,125 +1,153 @@
 name: Security Check for External Contributions
 
-# Make this action run when a PR is opened, updated with new commits, or reopened
+# Run this workflow on PR open, update, and reopen events
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 
-# This ensures this workflow runs first
+# This ensures this workflow runs first and blocks other workflows
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  security-check:
-    name: Check for external contributions with sensitive file modifications
+  # This job is the security gate that other workflows should depend on
+  security-gate:
+    name: Security Gate Check
     runs-on: ubuntu-latest
-    # Set a default to allow the workflow to complete even if we cancel others
     outputs:
-      cancel_workflows: ${{ steps.check-files.outputs.cancel_workflows || 'false' }}
-      modified_files: ${{ steps.check-files.outputs.modified_files }}
+      is_secure: ${{ steps.security-check.outputs.is_secure }}
       
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0  # Fetch all history to properly check file changes
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch all history to properly check file changes
       
-    - name: Check if PR is from external contributor and sensitive files were modified
-      id: check-files
-      shell: bash
-      env:
-        PR_AUTHOR: ${{ github.event.pull_request.user.login }}
-        REPO: ${{ github.repository }}
-        REPO_OWNER: ${{ github.repository_owner }}
-        BASE_SHA: ${{ github.event.pull_request.base.sha }}
-        HEAD_SHA: ${{ github.event.pull_request.head.sha }}
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        # TEMPORARILY REMOVED EXTERNAL CONTRIBUTOR CHECK FOR TESTING!
-        # This simulates an attacker trying to bypass the check
-        # In a real scenario, we'd check if the user is a collaborator or org member
-        echo "Simulating security check bypass - all PRs treated as external contributions"
-        
-        # Get the files changed in the PR
-        CHANGED_FILES=$(git diff --name-only "${BASE_SHA}" "${HEAD_SHA}")
-        MODIFIED_FILES=""
-        
-        # Check for modifications to sensitive files
-        if echo "$CHANGED_FILES" | grep -q -E '^\.github/'; then
-          MODIFIED_FILES="${MODIFIED_FILES} .github/ directory,"
-        fi
-        if echo "$CHANGED_FILES" | grep -q -E '^tools/'; then
-          MODIFIED_FILES="${MODIFIED_FILES} tools/ directory,"
-        fi
-        if echo "$CHANGED_FILES" | grep -q -E 'cmd/beyla-genfiles/beyla_genfiles\.go'; then
-          MODIFIED_FILES="${MODIFIED_FILES} beyla_genfiles.go,"
-        fi
-        
-        # Check for any modifications to Makefile
-        if echo "$CHANGED_FILES" | grep -q -E '^Makefile$'; then
-          MODIFIED_FILES="${MODIFIED_FILES} Makefile,"
-        fi
-        
-        # Remove trailing comma if any
-        MODIFIED_FILES=$(echo "$MODIFIED_FILES" | sed 's/,$//g')
-        
-        # For testing, force the workflow to treat all PRs as security risks
-        # if [ -n "$MODIFIED_FILES" ]; then
-        echo "FOR TESTING: Simulating security risk detection"
-        echo "cancel_workflows=true" >> $GITHUB_OUTPUT
-        echo "modified_files=$MODIFIED_FILES" >> $GITHUB_OUTPUT
-        if [ -z "$MODIFIED_FILES" ]; then
-          # If no sensitive files were found, add a dummy entry for testing
+      - name: Check for security concerns
+        id: security-check
+        shell: bash
+        env:
+          PR_AUTHOR: ${{ github.event.pull_request.user.login }}
+          REPO: ${{ github.repository }}
+          REPO_OWNER: ${{ github.repository_owner }}
+          BASE_SHA: ${{ github.event.pull_request.base.sha }}
+          HEAD_SHA: ${{ github.event.pull_request.head.sha }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # For testing: this code will make the check always fail
+          # showing the "Security Review Required" message on all PRs
+          # After testing, uncomment the real checks below and remove this
+          echo "FOR TESTING: Simulating security check"
+          echo "is_secure=false" >> $GITHUB_OUTPUT
+          echo "has_sensitive_files=true" >> $GITHUB_OUTPUT
           echo "modified_files=SIMULATED sensitive file (for testing)" >> $GITHUB_OUTPUT
-        fi
-        # else
-        #   echo "No sensitive files were modified by external contributor"
-        #   echo "cancel_workflows=false" >> $GITHUB_OUTPUT
-        #   echo "modified_files=" >> $GITHUB_OUTPUT
-        # fi
-        
-    - name: Warn about canceled workflows
-      if: steps.check-files.outputs.cancel_workflows == 'true'
-      run: |
-        echo "::warning::External contribution modifies sensitive files. Subsequent workflows will be canceled for security review."
+          exit 0
+          
+          # Check if PR author is from the same organization
+          # ORG_MEMBER=false
 
-    - name: Comment on PR about security concerns
-      if: steps.check-files.outputs.cancel_workflows == 'true'
-      uses: actions/github-script@v6
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const modifiedFiles = '${{ steps.check-files.outputs.modified_files }}';
-          await github.rest.issues.createComment({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.issue.number,
-            body: `## ⚠️ Security Review Required for External Contribution ⚠️
-            
-            [THIS IS A TEST RUN - SIMULATING SECURITY CHECK]
-            
-            Thank you for your contribution! 
-            
-            As you're not a repository collaborator, this PR requires a security review because it modifies sensitive files:
-            - ${modifiedFiles}
-            
-            These files can affect the project's build system, CI/CD workflows, or other security-sensitive areas. All other automated checks have been temporarily paused until a maintainer reviews these changes.
-            
-            **Note to maintainers:** Please review these changes carefully before allowing other workflows to proceed.`
-          });
-        
-  cancel-workflows:
-    name: Cancel subsequent workflows if needed
-    needs: security-check
-    if: needs.security-check.outputs.cancel_workflows == 'true'
+          # # Check if PR author is a collaborator
+          # IS_COLLABORATOR=false
+          # if gh api "repos/${REPO}/collaborators/${PR_AUTHOR}" --silent 2>/dev/null; then
+          #   echo "PR author is a collaborator"
+          #   IS_COLLABORATOR=true
+          # fi
+
+          # # If we have an organization, check if the user is a member
+          # if [[ "${REPO_OWNER}" != *"/"* ]]; then
+          #   if gh api "orgs/${REPO_OWNER}/members/${PR_AUTHOR}" --silent 2>/dev/null; then
+          #     echo "PR author is an organization member"
+          #     ORG_MEMBER=true
+          #   fi
+          # fi
+
+          # # If PR author is either a collaborator or an org member, mark as secure
+          # if [[ "$IS_COLLABORATOR" == "true" || "$ORG_MEMBER" == "true" ]]; then
+          #   echo "PR author is a trusted contributor, no security review needed"
+          #   echo "is_secure=true" >> $GITHUB_OUTPUT
+          #   echo "has_sensitive_files=false" >> $GITHUB_OUTPUT
+          #   echo "modified_files=" >> $GITHUB_OUTPUT
+          #   exit 0
+          # fi
+          
+          # # If we get here, PR is from external contributor
+          # echo "PR is from an external contributor, checking modified files..."
+          
+          # # Get the files changed in the PR
+          # CHANGED_FILES=$(git diff --name-only "${BASE_SHA}" "${HEAD_SHA}")
+          # MODIFIED_FILES=""
+          
+          # # Check for modifications to sensitive files
+          # if echo "$CHANGED_FILES" | grep -q -E '^\.github/'; then
+          #   MODIFIED_FILES="${MODIFIED_FILES} .github/ directory,"
+          # fi
+          # if echo "$CHANGED_FILES" | grep -q -E '^tools/'; then
+          #   MODIFIED_FILES="${MODIFIED_FILES} tools/ directory,"
+          # fi
+          # if echo "$CHANGED_FILES" | grep -q -E 'cmd/beyla-genfiles/beyla_genfiles\.go'; then
+          #   MODIFIED_FILES="${MODIFIED_FILES} beyla_genfiles.go,"
+          # fi
+          
+          # # Check for any modifications to Makefile
+          # if echo "$CHANGED_FILES" | grep -q -E '^Makefile$'; then
+          #   MODIFIED_FILES="${MODIFIED_FILES} Makefile,"
+          # fi
+          
+          # # Remove trailing comma if any
+          # MODIFIED_FILES=$(echo "$MODIFIED_FILES" | sed 's/,$//g')
+          
+          # if [ -n "$MODIFIED_FILES" ]; then
+          #   echo "Sensitive files were modified by an external contributor"
+          #   echo "is_secure=false" >> $GITHUB_OUTPUT
+          #   echo "has_sensitive_files=true" >> $GITHUB_OUTPUT
+          #   echo "modified_files=$MODIFIED_FILES" >> $GITHUB_OUTPUT
+          # else
+          #   echo "No sensitive files were modified by external contributor"
+          #   echo "is_secure=true" >> $GITHUB_OUTPUT
+          #   echo "has_sensitive_files=false" >> $GITHUB_OUTPUT
+          #   echo "modified_files=" >> $GITHUB_OUTPUT
+          # fi
+      
+      - name: Fail check if security review needed
+        if: steps.security-check.outputs.has_sensitive_files == 'true'
+        run: |
+          echo "::error::External contribution modifies sensitive files. Security review required before running workflows."
+          # This will cause the job to fail, which will block other workflows
+          exit 1
+          
+      - name: Pass check if no security issues
+        if: steps.security-check.outputs.is_secure == 'true'
+        run: |
+          echo "No security concerns detected, workflows can proceed."
+
+  # This job runs only when security check fails to post a message on the PR
+  notify-security-issue:
+    name: Notify Security Review Required
+    needs: security-gate
+    if: failure() && needs.security-gate.outputs.has_sensitive_files == 'true'
     runs-on: ubuntu-latest
     steps:
-    - name: Cancel subsequent workflows
-      uses: styfle/cancel-workflow-action@01ce38bf961b4e243a6342cbade0dbc8ba3f0432 # v0.12.0
-      with:
-        # Cancel all workflows running on this PR, not just the specific ones listed
-        # This prevents attackers from bypassing security by creating new workflows
-        access_token: ${{ github.token }}
-        pull_request: ${{ github.event.pull_request.number }}
-        workflow_id: "*"
+      - name: Comment on PR about security concerns
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const modifiedFiles = '${{ needs.security-gate.outputs.modified_files }}';
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: `## ⚠️ Security Review Required for External Contribution ⚠️
+              
+              [THIS IS A TEST RUN - SIMULATING SECURITY CHECK]
+              
+              Thank you for your contribution! 
+              
+              As you're not a repository collaborator, this PR requires a security review because it modifies sensitive files:
+              - ${modifiedFiles}
+              
+              These files can affect the project's build system, CI/CD workflows, or other security-sensitive areas. All workflows have been blocked until a maintainer reviews these changes.
+              
+              **Note to maintainers:** Please review these changes carefully before approving the PR.`
+            });
