--- a/.github/workflows/security-check.yml
+++ b/.github/workflows/security-check.yml
@@ -5,19 +5,17 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
-# This ensures this workflow runs first and blocks other workflows
+# This ensures this workflow runs first 
+# The group name means this workflow creates a check named "security-check"
+# that can be required in branch protection settings
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  # This job is the security gate that other workflows should depend on
-  security-gate:
-    name: Security Gate Check
+  security-check:
+    name: External Contribution Security Review
     runs-on: ubuntu-latest
-    outputs:
-      is_secure: ${{ steps.security-check.outputs.is_secure }}
-      
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -35,25 +33,24 @@ jobs:
           HEAD_SHA: ${{ github.event.pull_request.head.sha }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # For testing: this code will make the check always fail
-          # showing the "Security Review Required" message on all PRs
-          # After testing, uncomment the real checks below and remove this
-          echo "FOR TESTING: Simulating security check"
-          echo "is_secure=false" >> $GITHUB_OUTPUT
-          echo "has_sensitive_files=true" >> $GITHUB_OUTPUT
-          echo "modified_files=SIMULATED sensitive file (for testing)" >> $GITHUB_OUTPUT
-          exit 0
+          # For testing: this code will make the check always fail 
+          # to simulate an external contributor with sensitive changes
+          # Remove this in production
+          echo "FOR TESTING: Simulating security check for external contributor"
+          echo "SECURITY_ISSUE=true" >> $GITHUB_ENV
+          echo "MODIFIED_FILES=SIMULATED sensitive file (for testing)" >> $GITHUB_ENV
           
-          # Check if PR author is from the same organization
+          # Uncomment and use this code in production:
+          # # Check if PR author is from the same organization
           # ORG_MEMBER=false
-
+          # 
           # # Check if PR author is a collaborator
           # IS_COLLABORATOR=false
           # if gh api "repos/${REPO}/collaborators/${PR_AUTHOR}" --silent 2>/dev/null; then
           #   echo "PR author is a collaborator"
           #   IS_COLLABORATOR=true
           # fi
-
+          # 
           # # If we have an organization, check if the user is a member
           # if [[ "${REPO_OWNER}" != *"/"* ]]; then
           #   if gh api "orgs/${REPO_OWNER}/members/${PR_AUTHOR}" --silent 2>/dev/null; then
@@ -61,23 +58,20 @@ jobs:
           #     ORG_MEMBER=true
           #   fi
           # fi
-
-          # # If PR author is either a collaborator or an org member, mark as secure
+          # 
+          # # If PR author is either a collaborator or an org member, no security concerns
           # if [[ "$IS_COLLABORATOR" == "true" || "$ORG_MEMBER" == "true" ]]; then
           #   echo "PR author is a trusted contributor, no security review needed"
-          #   echo "is_secure=true" >> $GITHUB_OUTPUT
-          #   echo "has_sensitive_files=false" >> $GITHUB_OUTPUT
-          #   echo "modified_files=" >> $GITHUB_OUTPUT
           #   exit 0
           # fi
-          
+          # 
           # # If we get here, PR is from external contributor
           # echo "PR is from an external contributor, checking modified files..."
-          
+          # 
           # # Get the files changed in the PR
           # CHANGED_FILES=$(git diff --name-only "${BASE_SHA}" "${HEAD_SHA}")
           # MODIFIED_FILES=""
-          
+          # 
           # # Check for modifications to sensitive files
           # if echo "$CHANGED_FILES" | grep -q -E '^\.github/'; then
           #   MODIFIED_FILES="${MODIFIED_FILES} .github/ directory,"
@@ -88,57 +82,33 @@ jobs:
           # if echo "$CHANGED_FILES" | grep -q -E 'cmd/beyla-genfiles/beyla_genfiles\.go'; then
           #   MODIFIED_FILES="${MODIFIED_FILES} beyla_genfiles.go,"
           # fi
-          
+          # 
           # # Check for any modifications to Makefile
           # if echo "$CHANGED_FILES" | grep -q -E '^Makefile$'; then
           #   MODIFIED_FILES="${MODIFIED_FILES} Makefile,"
           # fi
-          
+          # 
           # # Remove trailing comma if any
           # MODIFIED_FILES=$(echo "$MODIFIED_FILES" | sed 's/,$//g')
-          
+          # 
           # if [ -n "$MODIFIED_FILES" ]; then
           #   echo "Sensitive files were modified by an external contributor"
-          #   echo "is_secure=false" >> $GITHUB_OUTPUT
-          #   echo "has_sensitive_files=true" >> $GITHUB_OUTPUT
-          #   echo "modified_files=$MODIFIED_FILES" >> $GITHUB_OUTPUT
-          # else
-          #   echo "No sensitive files were modified by external contributor"
-          #   echo "is_secure=true" >> $GITHUB_OUTPUT
-          #   echo "has_sensitive_files=false" >> $GITHUB_OUTPUT
-          #   echo "modified_files=" >> $GITHUB_OUTPUT
+          #   echo "SECURITY_ISSUE=true" >> $GITHUB_ENV
+          #   echo "MODIFIED_FILES=$MODIFIED_FILES" >> $GITHUB_ENV
           # fi
       
-      - name: Fail check if security review needed
-        if: steps.security-check.outputs.has_sensitive_files == 'true'
-        run: |
-          echo "::error::External contribution modifies sensitive files. Security review required before running workflows."
-          # This will cause the job to fail, which will block other workflows
-          exit 1
-          
-      - name: Pass check if no security issues
-        if: steps.security-check.outputs.is_secure == 'true'
-        run: |
-          echo "No security concerns detected, workflows can proceed."
-
-  # This job runs only when security check fails to post a message on the PR
-  notify-security-issue:
-    name: Notify Security Review Required
-    needs: security-gate
-    if: failure() && needs.security-gate.outputs.has_sensitive_files == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Comment on PR about security concerns
+      - name: Post comment for security review needed
+        if: env.SECURITY_ISSUE == 'true'
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const modifiedFiles = '${{ needs.security-gate.outputs.modified_files }}';
+            const modifiedFiles = '${{ env.MODIFIED_FILES }}';
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `## ⚠️ Security Review Required for External Contribution ⚠️
+              body: `## ⚠️ Security Review Required ⚠️
               
               [THIS IS A TEST RUN - SIMULATING SECURITY CHECK]
               
@@ -151,3 +121,9 @@ jobs:
               
               **Note to maintainers:** Please review these changes carefully before approving the PR.`
             });
+          
+      - name: Fail check if security review needed
+        if: env.SECURITY_ISSUE == 'true'
+        run: |
+          echo "::error::External contribution modifies sensitive files. Security review required."
+          exit 1
