--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -1,10 +1,11 @@
 name: Clang Format Check
 
 on:
-  push:
-    branches: [ 'main', 'release-*' ]
-  pull_request:
-    branches: [ 'main', 'release-*' ]
+  # Only run after security-check workflow completes successfully
+  workflow_run:
+    workflows: ["security-check"]
+    types:
+      - completed
 
 # Set restrictive permissions at workflow level
 permissions:
@@ -12,6 +13,8 @@ permissions:
 
 jobs:
   clang-format:
+    # Only run if the security check passed
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
