--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -1,11 +1,8 @@
 name: Clang Format Check
 
 on:
-  # Only run after security-check workflow completes successfully
-  workflow_run:
-    workflows: ["security-check"]
-    types:
-      - completed
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 # Set restrictive permissions at workflow level
 permissions:
@@ -13,10 +10,10 @@ permissions:
 
 jobs:
   clang-format:
-    # Only run if the security check passed
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-
+    # Only run if security check passed
+    needs: security-check
+    if: ${{ needs.security-check.outputs.security_cleared == 'true' || !failure() }}
     steps:
       - name: Checkout code
         uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
@@ -42,4 +39,9 @@ jobs:
             echo "Error: Some files are not formatted correctly. Please run clang-format on the modified files or use the provided pre-commit hook."
             exit 1
           fi
+
+  # Reference the security-check workflow
+  security-check:
+    uses: ./.github/workflows/security-check.yml
+    secrets: inherit
 
