--- a/.github/workflows/pull_request_integration_tests_vm_5.15_x86_64.yml
+++ b/.github/workflows/pull_request_integration_tests_vm_5.15_x86_64.yml
@@ -13,7 +13,16 @@ permissions:
   contents: read
 
 jobs:
+  # Reference the security-check workflow when running on PRs
+  security-check:
+    if: github.event_name == 'pull_request'
+    uses: ./.github/workflows/security-check.yml
+    secrets: inherit
+    
   test:
+    # Add dependency on security-check for PR events only
+    needs: [security-check]
+    if: ${{ github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true' || !failure() }}
     uses: ./.github/workflows/workflow_integration_tests_vm.yml
     with:
       arch: x86_64
