--- a/.github/workflows/pull_request_k8s_integration_tests.yml
+++ b/.github/workflows/pull_request_k8s_integration_tests.yml
@@ -14,6 +14,9 @@ jobs:
   test:
     name: test
     runs-on: ubuntu-latest-8-cores
+    # Add dependency on security-check for PR events only
+    needs: security-check
+    if: ${{ github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true' || !failure() }}
     # Grant specific permissions needed only for this job
     permissions:
       contents: read
@@ -52,3 +55,9 @@ jobs:
         with:
           file: ./testoutput/itest-covdata.txt
           flags: k8s-integration-test
+
+  # Reference the security-check workflow when running on PRs
+  security-check:
+    if: github.event_name == 'pull_request'
+    uses: ./.github/workflows/security-check.yml
+    secrets: inherit
